external-crates/move/crates/move-compiler/tests/move_2024/parser/use_fun_unit.move
module a::m {
    use fun foo as ().foo;
    fun foo() { abort 0 }
}
